k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: survey-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: survey-api
  template:
    metadata:
      labels:
        app: survey-api
    spec:
      serviceAccountName: survey-sa
      containers:
        - name: survey-api
          image: image-registry.openshift-image-registry.svc:5000/survey-app/survey-api:latest
          ports:
            - containerPort: 8080

          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false

          readinessProbe:
            httpGet:
              path: /health
              port: 8080

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
