k8s/app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: survey-api
spec:
  to:
    kind: Service
    name: survey-api
  port:
    targetPort: 8080
  tls:
    termination: edge
